--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,19 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Install
+      run: npm ci
+    - name: Build
+      run: npm run build --if-present
+      env: 
+        AUTH0_BASE_URL: "abc123"
+        AUTH0_DOMAIN: "abc123"
+        AUTH0_CLIENT_ID: "abc123"
+        AUTH0_CLIENT_SECRET: "abc123"
+        AUTH0_SECRET=: "abc123"
+        AUTH0_REDIRECT_URI: "/api/auth/callback"
+        AUTH0_LOGOUT_REDIRECT_URI: "/"
+        AUTH0_SCOPE: "openid profile"
+        SESSION_COOKIE_LIFETIME: 7200 
+    - name: Test
+      run: npm test
