--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,15 +28,15 @@ jobs:
       run: npm ci
     - name: Build
       run: npm run build --if-present
-      env: 
-        AUTH0_BASE_URL: "abc123"
-        AUTH0_DOMAIN: "abc123"
-        AUTH0_CLIENT_ID: "abc123"
-        AUTH0_CLIENT_SECRET: "abc123"
-        AUTH0_SECRET=: "abc123"
+      env:
+        AUTH0_BASE_URL: "http://0.0.0.0:3000"
+        AUTH0_DOMAIN: "https://foobar.eu.auth0.com"
+        AUTH0_CLIENT_ID: "abcDefghIjklmnSopqrstv1234567890"
+        AUTH0_CLIENT_SECRET: "SR7qI9zbyrcI6dHCMUQ-GRVFps3g_hw80yTQky3L245DS7REYKtxNpP3tkBXu1IQ"
+        AUTH0_SECRET=: "922056c9f6667f22913ab29a91dcab041b4d84872e082045bb66d3f623ae4204"
         AUTH0_REDIRECT_URI: "/api/auth/callback"
         AUTH0_LOGOUT_REDIRECT_URI: "/"
         AUTH0_SCOPE: "openid profile"
-        SESSION_COOKIE_LIFETIME: 7200 
+        SESSION_COOKIE_LIFETIME: 7200
     - name: Test
       run: npm test
