--- a/package.json
+++ b/package.json
@@ -22,23 +22,24 @@
     "clsx": "^1.1.1",
     "country-list": "^2.2.0",
     "dedent": "^0.7.0",
-    "dotenv": "^12.0.3",
+    "dotenv": "^16.0.0",
     "eslint": "^8.5.0",
     "eslint-config-next": "^12.0.7",
-    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jest": "^26.1.3",
     "eslint-plugin-next": "^0.0.0",
     "jest": "^27.4.5",
     "mailgun-js": "^0.22.0",
     "mockdate": "^3.0.5",
     "next": "^12.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "round-to": "^6.0.0",
+    "styled-jsx": "^5.0.2",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "validate-vat-ts": "^1.2.1",
-    "yaml": "^1.10.2"
+    "yaml": "^2.0.0"
   },
   "scripts": {
     "dev": "next dev",
