--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
-    "@hapi/boom": "^9.1.4",
+    "@hapi/boom": "^10.0.0",
     "@jssc/szamlazz.js": "^4.2.1",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.8",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.7.1",
     "@types/react": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
@@ -27,7 +27,7 @@
     "eslint-config-next": "^12.0.7",
     "eslint-plugin-jest": "^26.1.3",
     "eslint-plugin-next": "^0.0.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
     "mailgun-js": "^0.22.0",
     "mockdate": "^3.0.5",
     "next": "^12.0.7",
@@ -35,7 +35,7 @@
     "react-dom": "^18.0.0",
     "round-to": "^6.0.0",
     "styled-jsx": "^5.0.2",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "validate-vat-ts": "^1.2.1",
@@ -61,33 +61,5 @@
   "bugs": {
     "url": "https://github.com/jssc-eu/proforma/issues"
   },
-  "homepage": "https://github.com/jssc-eu/proforma#readme",
-  "jest": {
-    "testMatch": [
-      "<rootDir>/**/*.test.js",
-      "<rootDir>/**/*.test.ts",
-      "<rootDir>/test/**/*.test.js",
-      "<rootDir>/test/**/*.test.ts"
-    ],
-    "transform": {
-      "^.+\\.ts?$": "ts-jest",
-      "node_modules/round-to/.+\\.(j|t)s?$": "ts-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!round-to/.*)"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/.next/",
-      "<rootDir>/dist/",
-      "<rootDir>/szamlazz/"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "."
-    ],
-    "setupFiles": [
-      "<rootDir>/test/dotenv-config.js"
-    ]
-  }
+  "homepage": "https://github.com/jssc-eu/proforma#readme"
 }
