--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jest": "^26.1.3",
     "eslint-plugin-next": "^0.0.0",
     "jest": "^28.1.3",
+    "kdljs": "^0.1.4",
     "mailgun-js": "^0.22.0",
     "mockdate": "^3.0.5",
     "next": "^12.0.7",
@@ -62,5 +63,8 @@
     "url": "https://github.com/jssc-eu/proforma/issues"
   },
   "homepage": "https://github.com/jssc-eu/proforma#readme",
-  "cacheDirectories": ["node_modules", ".next/cache"]
+  "cacheDirectories": [
+    "node_modules",
+    ".next/cache"
+  ]
 }
