--- a/events-config.yaml
+++ b/events-config.yaml
@@ -1,88 +1,6 @@
 ---
 events:
 
-  reinforce2021:
-    label: "Reinforce AI Conference 2021"
-    dates:
-      - ticket-name-contains: "ML/DL"
-        date: "December 2 & 9, 2020"
-      - ticket-name-contains: "MLflow"
-        date: "November 23 & 24, 2020"
-      - ticket-name-contains: "*"
-        date: "March 3–5, 2021"
-    catering:
-      - ticket-name-contains: "*"
-        net-price: 0
-    invoice:
-      id-prefix: "RF"
-      logo-image: "RF-szamlazzhu.png"
-      comment: |
-        The invoice includes mediated services.
-        Paid in full.
-        This document was issued electronically and is therefore valid without signature.
-      e-invoice: true
-      currency: EUR
-    email:
-      replyToAddress: "hello@reinforceconf.com"
-      subject: "Your invoice for Reinforce AI Conference 2021"
-      message: |
-        Dear Attendee!
-
-        Thank you for taking part in Reinforce AI Conference 2021.
-
-        Please find attached our official invoice for the Reinforce AI conference.
-        In case you have an issue with the invoice please reply to this e-mail.
-        In case you have a general question regarding the conference please write to: hello@reinforceconf.com
-
-        The Reinforce conference team
-
-    bank:
-      name: 'Raiffeisen Bank, SWIFT: UBRTHUHB'
-      accountNumber: 'HU73-1201-0659-0160-2199-0040-0002'
-    tito-signature-validator-env: TITO_TOKEN_RF_2021
-
-
-  reinforce2021online:
-    label: "Reinforce AI Conference 2021"
-    dates:
-      - ticket-name-contains: "ML/DL"
-        date: "December 2 & 9, 2020"
-      - ticket-name-contains: "MLflow"
-        date: "November 23 & 24, 2020"
-      - ticket-name-contains: "*"
-        date: "March 3–5, 2021"
-    catering:
-      - ticket-name-contains: "*"
-        net-price: 0
-    invoice:
-      id-prefix: "RF"
-      logo-image: "RF-szamlazzhu.png"
-      comment: |
-        The invoice includes mediated services.
-        Paid in full.
-        This document was issued electronically and is therefore valid without signature.
-      e-invoice: true
-      currency: EUR
-    email:
-      replyToAddress: "hello@reinforceconf.com"
-      subject: "Your invoice for Reinforce AI Conference 2021"
-      message: |
-        Dear Attendee!
-
-        Thank you for taking part in Reinforce AI Conference 2021.
-
-        Please find attached our official invoice for the Reinforce AI conference.
-        In case you have an issue with the invoice please reply to this e-mail.
-        In case you have a general question regarding the conference please write to: hello@reinforceconf.com
-
-        The Reinforce conference team
-
-    bank:
-      name: 'Raiffeisen Bank, SWIFT: UBRTHUHB'
-      accountNumber: 'HU73-1201-0659-0160-2199-0040-0002'
-    tito-signature-validator-env: TITO_TOKEN_RF
-
-
   jsconf-budapest-2022:
     label: "JSConf Budapest 2022"
     dates:
@@ -116,7 +34,7 @@ events:
 
     bank:
       name: "Wise, SWIFT/BIC: TRWIBEB1XXX"
-      accountNumber: "BE46-9671-1672-7136"
+      account-number: "BE46-9671-1672-7136"
     tito-signature-validator-env: TITO_TOKEN_JS
 
 
