--- a/events-config.yaml
+++ b/events-config.yaml
@@ -1,14 +1,14 @@
 ---
 events:
 
-  jsconf-budapest-2022:
-    label: "JSConf Budapest 2022"
+  jsconf-budapest-2024:
+    label: "JSConf Budapest 2024"
     dates:
       - ticket-name-contains: "*"
-        date: "June 2-3, 2022"
+        date: "June 27-28, 2024"
     catering:
       - ticket-name-contains: "*"
-        net-price: 128
+        net-price: 140
     invoice:
       id-prefix: "JSCBP"
       logo-image: "JSCBP-szamlazzhu.png"
@@ -20,18 +20,17 @@ events:
       currency: EUR
     email:
       replyToAddress: "team@jsconfbp.com"
-      subject: "Your invoice for JSConf Budapest 2022"
+      subject: "Your invoice for JSConf Budapest 2024"
       message: |
         Dear Attendee!
 
-        Thank you for purchasing tickets for JSConf Budapest 2022.
+        Thank you for purchasing tickets for JSConf Budapest 2024.
 
-        Please find attached our official invoice for the conference.
+        Please find our official invoice for the conference attached.
         In case you have an issue with the invoice, or you have a general question
         regarding the conference please write to: team@jsconfbp.com
 
         The JSConf Budapest team
-
     bank:
       name: "Wise, SWIFT/BIC: TRWIBEB1XXX"
       account-number: "BE46-9671-1672-7136"
